--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -6,7 +6,7 @@ h1{
 }
 
 body {
-    background-image: url("https://cdn.pixabay.com/photo/2016/12/15/14/32/question-mark-background-1909040_960_720.png");
+    background-image: url("https://st3.depositphotos.com/4278403/18156/v/600/depositphotos_181569746-stock-video-white-question-mark-icon-form.jpg");
 }
 
 .container{
